--- a/frontend/package.json
+++ b/frontend/package.json
@@ -9,8 +9,15 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@apollo/client": "^3.7.14",
+    "@emotion/react": "^11.11.0",
+    "@emotion/styled": "^11.11.0",
+    "@mui/material": "^5.13.2",
+    "apollo-upload-client": "^17.0.0",
     "eslint": "8.41.0",
     "eslint-config-next": "13.4.3",
+    "formik": "^2.3.2",
+    "graphql": "^16.6.0",
     "next": "13.4.3",
     "react": "18.2.0",
     "react-dom": "18.2.0"
